--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -143,3 +143,12 @@ body {
 .lang-switcher {
     margin-right: 5px !important;
 }
+
+/* FAQ
+/************************/
+.faq .question {
+    font-weight: bold;
+}
+.faq .answer {
+    margin-bottom: 20px;
+}
